2007-01-07  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/mol.cpp: Moved all Destroy* calls to the end of Delete* functions so
	that indexes are updated and other meta information.

2007-01-07 Tim Vandermeersch <tim.vandermeersch@gmail.com>
	
	* src/math/vector3.cpp: Added Point2PlaneAngle(vector3 a, vector3 b,
	vector3 c, vector3 d) (moved from OBForceField)
	
	* src/forcefield.cpp: Added logging features

	* src/forcefields/forcefieldmmff.cpp: All energy functions except
	E_Electrostatic() now use a OBFFXXXCalculationYYY class. Runs much
	faster.

	* src/formats/mopacformat.cpp: Added MOPAC Internal format (mopin)
	
	* data/exttype.txt: Updated for MOPAC Internal format (mopin)

2007-01-06 Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005/OBPython/setup.py: Bumped up version number to 1.0.
	Added a postinstall script that sets BABEL_DATADIR. Included
	zlib1.dll.

	* Added windows-vc2005/OBPython/openbabel_postinstall.py: A post
	install script that sets the value of BABEL_DATADIR.

	* windows-vc2005/OBPython/README.txt: Updated instructions on how to
	run setup.py to create the distribution.

2007-01-06 Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-[python,java,perl,ruby].i: Added ability to handle
	the new pluginiter.h, and in particular, its use in
	OBFingerprint.Iter. Also, regenerated all of the dependent files.

	* scripts/openbabel-python.i: Removed python code added on 2006-12-20
	to set BABEL_DATADIR as it actually had no effect.

2007-01-06 Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields: Ghemical now uses SMARTS for atomtype setting.
	
	* src/forcefields: Added initial MMFF94 implementation. (uses new
	OBFFCalculation class for better performance)

	* tools/obgen.cpp: Now uses OBForceField::GenerateCoordinates().

	* data/: Added SMARTS patterns to ghemical.prm for typing. Added
	ghemical.prm to Makefile.*
	Added parameters for MMFF94 (files for validating MMFF94 not included)
	Data needs forcefield subfolder??